# FOnline-412-cpp14

./: CMakeLists.txt  README.md  _compile_vs2019.bat  _compile_vs2019_DEBUG.bat  dll_compile_vs2019.bat  dll_compile_vs2019_DEBUG.bat
Source/: Client.cpp  Client.h  ClientInterface.cpp  Common.h  ConstantsManager.cpp  CritterCl.cpp  CritterCl.h  Defines.h  Dialogs.cpp  DummyData.h  LegacyFix.cpp  MainClient.cpp  MainMapper.cpp  MainServer.cpp  Map.cpp  Mapper.cpp  ProtoMap.cpp  ScriptBind.h  Server.cpp  Server.h  ServerClient.cpp  ServerNpc.cpp  ServerScript.cpp
Source/AngelScript/: as_builder.cpp  as_compiler.cpp  as_context.cpp  as_module.cpp  as_restore.cpp  as_scriptengine.cpp
